fix: background color of settings tab in dark mode
Refs: #1419

--- a/www/src/scss/themes/helpers/_dark-base.scss
+++ b/www/src/scss/themes/helpers/_dark-base.scss
@@ -61,6 +61,18 @@
     color: $text-base;
   }
 
+  .settings-nav {
+    span {
+      &:hover {
+        background-color: $not-so-black;
+      }
+    }
+
+    &-active {
+      background-color: $not-so-black;
+    }
+  }
+
   .misc-pane {
     .misc-header {
       a {
